alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  padding: 25px 31px;
 }
 .divider {
   background-color: var(--color-primary);
