--- a/src/components/Faq/Faq.module.css
+++ b/src/components/Faq/Faq.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin-top: 32px;
   padding-bottom: 50px;
+  padding: 25px 31px;
 }
 .wrapper {
   max-width: 1135px;
