--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,4 +1,5 @@
 .cardContainer {
+  padding: 25px 31px;
 }
 .top {
   display: flex;
